# opengate

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  open_gate_build.py  opengate.example.toml  pyproject.toml
.specify/: feature.json  integration.json
.specify/integrations/: codex.manifest.json  (+1 more)
docs/: benchmark-notes.md  codex-capture-notes.md  context-policy.md  csvql-local-agent-challenge.md  csvql-next-experiments.md  deepseek-coder-v2-lite.md  devstral-small-2507.md  gemma-4-e4b-it.md  glm-4-5-air-gguf.md  glm-4-5-air-nvfp4.md  interactive-codex.md  kimi-linear-nvfp4.md  live-codex-benchmark.md  minimax-m3-mxfp8.md  model-adaptation-checklist.md  ornith.md  qwen3-6-27b.md  qwen3-coder-30b-a3b-instruct-gguf.md  qwen3-coder-next.md  regression-workflow.md  release-process.md  tool-call-linter.md  upstream-capabilities.md  vllm-notes.md
open_gate/: __init__.py  adversarial.py  benchmark.py  capabilities.py  capture_to_fixture.py  codex_report.py  command_quality.py  config.py  inspect_capture.py  lint.py  linter.py  payload_probe.py  proxy.py  regression.py  server.py  streaming.py  summarize_report.py  version.py
scripts/: run_codex_capture_probe.ps1  run_codex_live_benchmark.ps1  run_codex_proxy_smoke.ps1  run_http_probe.ps1  run_proxy_benchmark.ps1  run_validation_loop.ps1  start_proxy.ps1
tests/: test_adversarial.py  test_benchmark.py  test_capture_to_fixture.py  test_codex_report.py  test_command_quality.py  test_config.py  test_linter.py  test_proxy.py  test_regression.py  test_server.py  test_streaming.py  test_version.py
(+51 files in other folders)
