[project]
name = "open-gate"
version = "0.6.2"
description = "Local Responses API capture harness and tool-call leakage linter for open coding models."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
open-gate = "open_gate.server:main"
open-gate-benchmark = "open_gate.benchmark:main"
open-gate-capture-to-fixture = "open_gate.capture_to_fixture:main"
open-gate-codex-report = "open_gate.codex_report:main"
open-gate-regression = "open_gate.regression:main"
open-gate-adversarial = "open_gate.adversarial:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
